diesel_compile_tests/tests/fail/derive/bad_embed.stderr
error: expected `,`
  --> tests/fail/derive/bad_embed.rs:14:20
   |
LL |     #[diesel(embed = true)]
   |                    ^
